Added CSS for scrollbar

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
     overflow-x:hidden;
 }
 
+::-webkit-scrollbar {
+    width:0px;
+}
+
 body {
     font-family:'Montserrat', sans-serif;
 }
