--- a/style.css
+++ b/style.css
@@ -495,6 +495,88 @@ header img {
     transition:opacity 0.2s ease-in-out;
 }
 
+.updates {
+    min-height:50vh;
+    width:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:#222;
+    color:white;
+}
+
+.updates .grid {
+    display:grid;
+    padding:20vh 0;
+    width:80%;
+    grid-template-columns:1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr;
+    grid-row-gap:3vh;
+    grid-column-gap:3vw;
+}
+
+.updates .grid .grid-element {
+    border-bottom:2px solid #f3f4f5;
+    padding-bottom:3vh;
+    display:flex;
+    flex-direction:column;
+    gap:1vh;
+    justify-content:center;
+    align-items:flex-start;
+}
+
+.updates .grid .grid-element p {
+    font-size:1vw;
+    line-height:1.5;
+    color:#eee;
+    font-weight:300;
+}
+
+.updates .grid-element a {
+    color:white;
+    display:inline-block;
+    padding:1vh 2vw;
+    text-transform:uppercase;
+    background: linear-gradient(135deg, rgba(47,137,208,1) 0%, rgba(84,217,92,1) 100%);
+    text-decoration:none;
+    font-weight:600;
+    font-size:1vw;
+}
+
+.updates .grid-element:not(:first-child) a {
+    margin-top:2vh;
+}
+
+.updates h1 {
+    font-weight:900;
+    font-size:2vw;
+}
+
+.update1 {
+    grid-column:1/2;
+    grid-row:1/4;
+    border:2px solid #f3f4f5;
+    padding:3vh 3vw;
+    gap:3vh !important;
+}
+
+.update2 {
+    grid-column:2/3;
+    grid-row:1/2;
+}
+
+.update4 {
+    grid-column:2/3;
+    grid-row:3/4;
+}
+
+.update3 {
+    grid-column:2/3;
+    grid-row:2/3;
+}
+
+
+
 @media screen and (max-width: 700px) {
     .hero .title {
         text-align:center;
@@ -641,5 +723,14 @@ header img {
 
     .footer .copyright {
         font-size:1.25vw !important;
+    }
+
+    .updates h1 {
+        font-size:4vw !important;
+    }
+
+    .updates p,
+    .updates a {
+        font-size:2vw !important
     }
 }
